components/app-configs/pgadmin4/base/pgadmin4-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin4
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: 8443-tcp
    port: 8443
    protocol: TCP
    targetPort: 8443
  selector:
    deployment: pgadmin4
