components/app-configs/pgadmin4/base/pgadmin4-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: pgadmin4
spec:
  port:
    targetPort: 8080
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: pgadmin4
